# caseload-scheduling

./: .gitignore  LICENSE  README.md  constraints.py  plotting.py  pyproject.toml  results.xlsx  schedule.py  utils.py  ~$results.xlsx
data/: availability.xlsx  cases.csv  cases.xlsx  sessions.xlsx  students.xlsx  students_with_groups.xlsx
data/example/: cases.csv
results/: results.xlsx
scripts/: plot.py  results.xlsx  solve.py
src/cschedule/: __init__.py  constraints.py  objective.py  plotting.py  scheduler.py  utils.py
